[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A thrilling mind game that challenges players with puzzles and intellectual tasks to test and enhance their cognitive abilities"
authors = ["aleks10e <hag20052016@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-calc = 'brain_games.scripts.brain_calc:main'
brain-even = 'brain_games.scripts.brain_even:main'
brain-gcd = 'brain_games.scripts.brain_gcd:main'
brain-progression = 'brain_games.scripts.brain_progression:main'
brain-prime = 'brain_games.scripts.brain_prime:main'

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
